# gnc-project

./: README.md  main.py  pyproject.toml
dynamics/: attitude.py  orbit.py  spacecraft.py
environment/: environment.py
math/: matrices.py  quaternion.py
sim/dynamics/: attitude.py  orbit.py  spacecraft.py
sim/environment/: atmosphere.py  environment.py  exponential_atmosphere_table.py  gravity.py  magnetic.py
sim/frames/: conversions.py
sim/math/: inertia.py  matrices.py  ode.py  quaternion.py  time.py
sim/utils/: clock.py  constants.py  orbit_utils.py
tests/: test_matrices.py
utils/: orbit_utils.py
