[project]
name = "gnc-project"
version = "0.1.0"
description = "A GNC Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "control>=0.10.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "ppigrf>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest]
pythonpath = ["."]
